--- a/client-side/src/app/echarts/line/basic-line-echart/basic-line-echart.component.html
+++ b/client-side/src/app/echarts/line/basic-line-echart/basic-line-echart.component.html
@@ -1,1 +1,2 @@
-<div echarts [option]="chartOption" class="charts"></div>
+<h1>HELLO WORLD</h1>
+<div echarts [options]="echartsOptions" [extentions]="echartsExtentions" class="charts"></div>
