--- a/client-side/src/app/signup/signup.component.html
+++ b/client-side/src/app/signup/signup.component.html
@@ -1,95 +1,127 @@
-
 <div class="form col-md-5 mx-auto shadow p-3 borde borde-primary rounded">
     <div class="borde borde-primary shadow-sm rounded-1">
-        
+
         <h3 class="text-center card-header bg-primary rounded-3 text-light py-2">Create Your Account</h3>
         <!-- <small class="alert alert-danger py-0" *ngIf="message != ''">{{message}}</small> -->
-        <small class="alert py-1 {{resStatus? 'alert-success' : 'alert-danger'}} text-center" *ngIf="message != ''">{{message}}</small>
+        <small class="alert py-1 {{resStatus? 'alert-success' : 'alert-danger'}} text-center"
+            *ngIf="message != ''">{{message}}</small>
         <form [formGroup]="formGroup" (submit)="handleRegister()" class="scrollableForm">
-        <div class="row">
-            <div class="form-group col-md-6 my-3">
-                <label for="" class="fw-bold">First Name</label>
-                <div class="form-floating">
-                    <input type="text" class="form-control " name="firstname" placeholder="firstname" formControlName="firstname" [class.is-valid]="formGroup.get('firstname')?.valid && formGroup.get('firstname')?.touched " [class.is-invalid]="formGroup.get('firstname')?.invalid && formGroup.get('firstname')?.touched " >
-                    <label for="" class="text-dark">First Name</label>
+            <div class="row">
+                <div class="form-group col-md-6 my-1">
+                    <label for="" class="fw-bold">First Name</label>
+                    <div class="form-floating">
+                        <input type="text" class="form-control " name="firstname" placeholder="firstname"
+                            formControlName="firstname"
+                            [class.is-valid]="formGroup.get('firstname')?.valid && formGroup.get('firstname')?.touched "
+                            [class.is-invalid]="formGroup.get('firstname')?.invalid && formGroup.get('firstname')?.touched ">
+                        <label for="" class="text-dark">First Name</label>
+                    </div>
+                    <div *ngIf="formGroup.get('firstname')?.errors && formGroup.get('firstname')?.touched">
+                        <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['required']">First name
+                            must be provided(It is required)</small>
+                        <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['minlength']">First name
+                            must not less than 3 character!</small>
+                    </div>
                 </div>
-                <div *ngIf="formGroup.get('firstname')?.errors && formGroup.get('firstname')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['required']">First name must be provided(It is required)</small>
-                    <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['minlength']">First name must not less than 3 character!</small>
+                <div class="form-group col-md-6 my-1">
+                    <label for="" class="fw-bold">Last Name</label>
+                    <div class="form-floating">
+                        <input type="text" class="form-control " name="lastname" placeholder="lastname"
+                            formControlName="lastname"
+                            [class.is-valid]="formGroup.get('lastname')?.valid && formGroup.get('lastname')?.touched "
+                            [class.is-invalid]="formGroup.get('lastname')?.invalid && formGroup.get('lastname')?.touched ">
+                        <label for="" class="text-dark">Last Name</label>
+                    </div>
+                    <div *ngIf="formGroup.get('lastname')?.errors && formGroup.get('lastname')?.touched">
+                        <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['required']">Last name
+                            must be provided(It is required)</small>
+                        <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['minlength']">Last name
+                            must not less than 3 character!</small>
+                    </div>
                 </div>
             </div>
-            <div class="form-group col-md-6 my-3">
-                <label for="" class="fw-bold">Last Name</label>
-                <div class="form-floating">
-                    <input type="text" class="form-control " name="lastname" placeholder="lastname" formControlName="lastname" [class.is-valid]="formGroup.get('lastname')?.valid && formGroup.get('lastname')?.touched " [class.is-invalid]="formGroup.get('lastname')?.invalid && formGroup.get('lastname')?.touched " >
-                    <label for="" class="text-dark">Last Name</label>
-                </div>
-                <div *ngIf="formGroup.get('lastname')?.errors && formGroup.get('lastname')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['required']">Last name must be provided(It is required)</small>
-                    <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['minlength']">Last name must not less than 3 character!</small>
-                </div>
-            </div>
-        </div>
-        
-        <div class="form-group my-3">
+
+            <div class="form-group my-1">
                 <label for="" class="fw-bold">E-mail Address</label>
                 <div class="form-floating">
-                    <input type="email" class="form-control " name="email" placeholder="email" formControlName="email" [class.is-valid]="formGroup.get('email')?.valid && formGroup.get('email')?.touched " [class.is-invalid]="formGroup.get('email')?.invalid && formGroup.get('email')?.touched " >
+                    <input type="email" class="form-control " name="email" placeholder="email" formControlName="email"
+                        [class.is-valid]="formGroup.get('email')?.valid && formGroup.get('email')?.touched "
+                        [class.is-invalid]="formGroup.get('email')?.invalid && formGroup.get('email')?.touched ">
                     <label for="" class="text-dark">E-mail</label>
                 </div>
                 <div *ngIf="formGroup.get('email')?.errors && formGroup.get('email')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['required']">E-mail address must be provided(It is required)</small>
-                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['email']">E-mail is not valid, please insert a valid email</small>
+                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['required']">E-mail address must
+                        be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['email']">E-mail is not valid,
+                        please insert a valid email</small>
                 </div>
             </div>
-            <div class="form-group my-3">
+            <div class="form-group my-1">
                 <label for="" class="fw-bold">Contact</label>
                 <div class="form-floating">
-                    <input type="tel" class="form-control " name="contact" placeholder="contact" formControlName="contact" [class.is-valid]="formGroup.get('contact')?.valid && formGroup.get('contact')?.touched " [class.is-invalid]="formGroup.get('contact')?.invalid && formGroup.get('contact')?.touched " >
+                    <input type="tel" class="form-control " name="contact" placeholder="contact"
+                        formControlName="contact"
+                        [class.is-valid]="formGroup.get('contact')?.valid && formGroup.get('contact')?.touched "
+                        [class.is-invalid]="formGroup.get('contact')?.invalid && formGroup.get('contact')?.touched ">
                     <label for="" class="text-dark">Contact</label>
                 </div>
                 <div *ngIf="formGroup.get('contact')?.errors && formGroup.get('contact')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['required']">Contact must be provided(It is required)</small>
-                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['pattern']">Contact must be 11 digit numbers starting with 0</small>
+                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['required']">Contact must be
+                        provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['pattern']">Contact must be 11
+                        digit numbers starting with 0</small>
+                </div>
+        </div>
+            <div class="row">
+                <div class="form-group col-md-6 my-1">
+                    <label for="" class="fw-bold">Verification PIN</label>
+                    <div class="form-floating">
+                        <input type="password" class="form-control " name="pin" placeholder="PIN"
+                            formControlName="pin"
+                            [class.is-valid]="formGroup.get('pin')?.valid && formGroup.get('pin')?.touched "
+                            [class.is-invalid]="formGroup.get('pin')?.invalid && formGroup.get('pin')?.touched ">
+                        <label for="" class="text-dark">PIN</label>
+                    </div>
+                    <div *ngIf="formGroup.get('pin')?.errors && formGroup.get('pin')?.touched">
+                        <small class="text-danger" *ngIf="formGroup.get('pin')?.errors?.['required']">Verification pin must be provided(It is required)</small>
+                        <small class="text-danger" *ngIf="formGroup.get('pin')?.errors?.['minlength']">PIN
+                            must not less than 6 characters</small>
+                        <small class="text-danger" *ngIf="formGroup.get('pin')?.errors?.['maxlength']">PIN
+                            must not greater than 6 characters</small>
+                    </div>
+                </div>
+                <div class="form-group col-md-6 my-1">
+                    <label for="" class="fw-bold">Confirm Verification PIN</label>
+                    <div class="form-floating">
+                        <input type="password" class="form-control " name="confirm_pin" placeholder="PIN"
+                            formControlName="confirm_pin"
+                            [class.is-valid]="formGroup.get('confirm_pin')?.valid && formGroup.get('confirm_pin')?.touched "
+                            [class.is-invalid]="formGroup.get('confirm_pin')?.invalid && formGroup.get('confirm_pin')?.touched ">
+                        <label for="" class="text-dark">Confirm PIN</label>
+                    </div>
+                    <div *ngIf="formGroup.get('confirm_pin')?.errors && formGroup.get('confirm_pin')?.touched">
+                        <small class="text-danger" *ngIf="formGroup.get('confirm_pin')?.errors?.['required']">PIN
+                            must be confirmed (It is required)</small>
+
+                    </div>
                 </div>
             </div>
-        <div class="row">
-            <div class="form-group col-md-6 my-3">
-                <label for="" class="fw-bold">Password</label>
-                <div class="form-floating">
-                    <input type="password" class="form-control " name="password" placeholder="password" formControlName="password" [class.is-valid]="formGroup.get('password')?.valid && formGroup.get('password')?.touched " [class.is-invalid]="formGroup.get('password')?.invalid && formGroup.get('password')?.touched " >
-                    <label for="" class="text-dark">Password</label>
-                </div>
-                <div *ngIf="formGroup.get('password')?.errors && formGroup.get('password')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('password')?.errors?.['required']">E-mail address must be provided(It is required)</small>
-                    <small class="text-danger" *ngIf="formGroup.get('password')?.errors?.['minlength']">Password must at least upto 6 characters</small>
-                </div>
+            <div class="col-12 px-2">
+                <p class="text-muted">By proceeding, you have agreed to the <a href="/register"
+                        class="text-decoration-none">terms</a> and <a href="/register"
+                        class="text-decoration-none">condition</a> of the site</p>
             </div>
-            <div class="form-group col-md-6 my-3">
-                <label for="" class="fw-bold">Confirm Password</label>
-                <div class="form-floating">
-                    <input type="password" class="form-control " name="co-password" placeholder="password" formControlName="co_password" [class.is-valid]="formGroup.get('co_password')?.valid && formGroup.get('password')?.touched " [class.is-invalid]="formGroup.get('co_password')?.invalid && formGroup.get('co_password')?.touched " >
-                    <label for="" class="text-dark">Confirm password</label>
-                </div>
-                <div *ngIf="formGroup.get('co_password')?.errors && formGroup.get('co_password')?.touched">
-                    <small class="text-danger" *ngIf="formGroup.get('co_password')?.errors?.['required']">Password must be provided(It is required)</small>
-                    
-                </div>
+            <div class="col-12 px-2">
+                <p>Already have an account? <a routerLink="/login" class="text-decoration-none text-primary">Log in.</a>
+                </p>
             </div>
-        </div>
-        <div class="col-12 px-2">
-            <p class="text-muted">By proceeding, you have agreed to the <a href="/register" class="text-decoration-none">terms</a> and <a href="/register" class="text-decoration-none">condition</a> of the site</p>
-        </div>
-        <div class="col-12 px-2">
-            <p>Already have an account? <a routerLink="/login" class="text-decoration-none text-primary">Log in.</a></p>
-        </div>
-        <button class="btn btn-primary mx-auto rounded-pill w-100" type="submit" [disabled]="">
-            {{
+            <button class="btn btn-primary mx-auto rounded-pill w-100" type="submit" [disabled]="">
+                {{
                 isLoading? "..."
                 : "Create Account"
-            }}
-            
-        </button>
-    </form>
+                }}
+
+            </button>
+        </form>
     </div>
 </div>
