--- a/client-side/src/app/add-money/add-money.component.html
+++ b/client-side/src/app/add-money/add-money.component.html
@@ -31,7 +31,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h3 class="modal-title" id="staticBackdropLabel">Add Money to You Account</h3>
+                            <h3 class="modal-title" id="staticBackdropLabel">Add Money to Your Account</h3>
                         </div>
                         <div class="modal-body">
                             <!-- bank transfer process -->
