--- a/client-side/src/app/transaction-history/transaction-history.component.html
+++ b/client-side/src/app/transaction-history/transaction-history.component.html
@@ -5,26 +5,28 @@
     <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
         <div class="container">
             <p class="ps-2 text-danger fs-3 fw-bold">Transaction <span class="text-color">History</span></p>
-            <div class="row">
+            <div class="row scrollable">
                 <div class="col-sm-6 border my-3 rounded p-2">
                     <div class="shadow p-2">
                         <h2 class="text-color">Credit</h2>
                         <ng-container *ngIf="creditTransaction.length; then isNotEmpty; else isEmpty"></ng-container>
                         <ng-template #isNotEmpty>
-                            <table class="table table-striped table-bordered table-hover table-responsive-sm">
-                                <tr>
-                                    <th>Amount($)</th>
-                                    <th>From (Account Number)</th>
-                                    <th>Method</th>
-                                    <th>Date</th>
-                                </tr>
-                                <tr *ngFor="let item of creditTransaction" >
-                                    <td>{{item.amount}}</td>
-                                    <td>{{item.senderAccountNumber}}</td>
-                                    <td>{{item.transactionMethod}}</td>
-                                    <td>{{item.timeStamp| date}}</td>
-                                </tr>
-                            </table>
+                            <div class="scrollableTable border">
+                                <table class="table table-striped table-bordered table-hover table-responsive-sm">
+                                    <tr>
+                                        <th>Amount($)</th>
+                                        <th>From (Account Number)</th>
+                                        <th>Method</th>
+                                        <th>Date</th>
+                                    </tr>
+                                    <tr *ngFor="let item of creditTransaction">
+                                        <td>{{item.amount}}</td>
+                                        <td>{{item.senderAccountNumber}}</td>
+                                        <td>{{item.transactionMethod}}</td>
+                                        <td>{{item.timeStamp| date}}</td>
+                                    </tr>
+                                </table>
+                            </div>
                         </ng-template>
                         <ng-template #isEmpty>
                             <h2 class="text-danger">No credit Hostory</h2>
@@ -34,7 +36,9 @@
                 <div class="col-sm-6 border my-3 p-2">
                     <div class="shadow p-2">
                         <h2 class="text-color">Debit</h2>
-                            <table class="table table-striped table-bordered table-hover table-responsive-sm" *ngIf="debitTransaction.length">
+                        <div class="scrollableTable" *ngIf="debitTransaction.length">
+                            <table class="table table-striped table-bordered table-hover table-responsive-sm"
+                               >
                                 <tr>
                                     <th>Amount($)</th>
                                     <th>To(Account Number)</th>
@@ -48,9 +52,8 @@
                                     <td>{{item.timeStamp| date}}</td>
                                 </tr>
                             </table>
-                        
-                            <h2 class="text-danger" *ngIf="!debitTransaction.length">No Debit Hostory</h2>
-                     
+                        </div>
+                        <h2 class="text-danger" *ngIf="!debitTransaction.length">No Debit Hostory</h2>
                     </div>
                 </div>
             </div>
