--- a/client-side/src/styles.css
+++ b/client-side/src/styles.css
@@ -74,3 +74,9 @@ fa-icon{
 .navbar-brand {
     font-family: cursive;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
