--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100%-3.65rem);
+    height: calc(100% - 3.65rem);
     cursor: pointer;
 }
 .sidenav-nav-item{
