--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,9 +1,93 @@
-*{
-    height: 100vh !important;
-}
+
 .container {
     margin-top: 5rem;
 }
-.h1_text{
-    font-size: 3rem;
+.overall_page{
+    height: 100vh;
 }
+.lan_content{
+    margin-top: 4rem;
+    
+}
+
+.bg {
+  background-image: url(/assets/com.Bg.PNG);
+    height: 70vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain; 
+}
+
+.ultimate_comm {
+  font-family: sans-serif !important;
+  font-weight: bold;
+  font-size: 3rem;
+  color: rgb(7, 7, 73);
+  line-height: 1;
+}
+span {
+  font-family: sans-serif !important;
+  font-size: 4.5rem;
+}
+  @media only screen and (max-width: 868px) {
+    .ultimate_comm {
+      font-size: 1rem;
+      word-wrap: break-word;
+    }
+  }
+
+
+.cssbuttons-io-button {
+    background: #A370F0;
+    color: white;
+    font-family: inherit;
+    padding: 0.35em;
+    padding-left: 1.2em;
+    font-size: 17px;
+    font-weight: 500;
+    border-radius: 0.9em;
+    border: none;
+    letter-spacing: 0.05em;
+    display: flex;
+    align-items: center;
+    box-shadow: inset 0 0 1.6em -0.6em #714da6;
+    overflow: hidden;
+    position: relative;
+    height: 2.8em;
+    padding-right: 3.3em;
+   }
+   
+   .cssbuttons-io-button .icon {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+    right: 0.3em;
+    transition: all 0.3s;
+   }
+   
+   .cssbuttons-io-button:hover .icon {
+    width: calc(100% - 0.6em);
+   }
+   
+   .cssbuttons-io-button .icon svg {
+    width: 1.1em;
+    transition: transform 0.3s;
+    color: #7b52b9;
+   }
+   
+   .cssbuttons-io-button:hover .icon svg {
+    transform: translateX(0.1em);
+   }
+   
+   .cssbuttons-io-button:active .icon {
+    transform: scale(0.95);
+   }
+   
