--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,20 +1,22 @@
 <app-landing-nav></app-landing-nav>
 <div class="container">
-  <div class="row text-center border">
-    <div class="col-sm-5">
+  <div class="row overall_page">
+    <div class="col-sm-6">
+      <div class="lan_content">
+      <p class="ultimate_comm">
+        <span class="text-danger">The bank you will love</span> Spend, save, and control your entire financial life __ in one place
+      </p>
       
-    </div>
-    <div class="col-sm-7 border">
-      <h1>Hello World</h1>
-      <div class="row">
-        <div class="col-sm-6">
-            <p>The modern way to control your savingswith just one app.</p>
+      <button class="cssbuttons-io-button w-lg-50"> Get started
+        <div class="icon">
+          <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path></svg>
         </div>
-        <div class="col-sm-6">
-          Another column code
-        </div>
-      </div>
+      </button>
     </div>
-  </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="bg">
+        </div>
+    </div>
 
 </div>
