--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,13 +24,13 @@
                 </div>
             </div>
             <div class="form-group my-3">
-                <label for="" class="fw-bold">Password</label>
+                <label for="" class="fw-bold">Verification Pin</label>
                 <div class="form-floating">
                     <input type="password" class="form-control " name="password" placeholder="password"
                         formControlName="password"
                         [class.is-valid]="formGroup.get('password')?.valid && formGroup.get('password')?.touched "
                         [class.is-invalid]="formGroup.get('password')?.invalid && formGroup.get('password')?.touched ">
-                    <label for="" class="text-dark">Password</label>
+                    <label for="" class="text-dark">Pin</label>
                 </div>
                 <div *ngIf="formGroup.get('password')?.errors && formGroup.get('password')?.touched">
                     <small class="text-danger" *ngIf="formGroup.get('password')?.errors?.['required']">Password must be
